Made changes to the navigation bar.
Added ./ in place of index.html to navigate to the Home page.
Corrected the contactUs to contact.html

--- a/storehours.html
+++ b/storehours.html
@@ -16,16 +16,16 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html/#home">Home</a>
+                        <a href="./#home">Home</a>
                     </li>
                     <li>
-                        <a href="index.html/#aboutLTS">Store Hours</a>
+                        <a href="./#aboutLTS">Store Hours</a>
                     </li>
                     <li>
-                        <a href="index.html/#ourMenu">Our Menu</a>
+                        <a href="./#ourMenu">Our Menu</a>
                     </li>
                     <li>
-                        <a href="contactUs">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </nav>
